KTS-1589 "Enabling and adding text to the disclaimer script for the login window seems to break the layout. " Fixed. Made css compatibility changes for ie6.
Reviewed By: Kevin

git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@6427 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-ie-icons.css
+++ b/resources/css/kt-ie-icons.css
@@ -194,3 +194,37 @@
 { 
     margin: 8px 0 10px 1em;
 }
+
+#loginbox.hasDisclaimer #loginboxTopMiddle {
+    position: absolute;
+    background: url(../graphics/login_border_repeat.png) top left repeat-x;
+    top:0;
+    left:35px;
+    width: 520px;
+    height: 3px; 
+}
+
+#loginbox.hasDisclaimer #loginboxBottomMiddle {
+    position: absolute;
+    background: url(../graphics/login_border_bottom.png) bottom left repeat-x;
+    bottom: 0;
+    left: 35px;
+    width: 520px;
+    height: 3px;
+}
+
+#loginbox.hasDisclaimer #loginboxLeftTop {
+    height: 250px;
+}
+
+#loginbox.hasDisclaimer #loginboxLeftBottom {
+    height: 250px;
+}
+
+#loginbox.hasDisclaimer #loginboxRightTop {
+    height: 250px;
+}
+
+#loginbox.hasDisclaimer #loginboxRightBottom {
+    height: 250px;
+}
